k8s/jicofo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jicofo
    service: jicofo
  name: jicofo
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jicofo
        service: jicofo
    spec:
      containers:
      - env:
        - name: XMPP_SERVER
          value: <IP address of the prosody ClusterIP service>
        - name: XMPP_DOMAIN
          value: meet.jitsi
        - name: XMPP_AUTH_DOMAIN
          value: auth.meet.jitsi
        - name: JICOFO_COMPONENT_SECRET
          value: s3cr37
        - name: JICOFO_AUTH_USER
          value: focus
        - name: JICOFO_AUTH_PASSWORD
          value: passw0rd
        - name: TZ
          value: Europe/Paris
        image: jitsi/jicofo
        name: jicofo
        resources: {}
      restartPolicy: Always
status: {}
