k8s/jvb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jvb
    service: jvb
  name: jvb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jvb
        service: jvb
    spec:
      containers:
      - env:
        - name: XMPP_SERVER
          value: <IP address of the prosody ClusterIP service>
        - name: DOCKER_HOST_ADDRESS
          value: <External IP address of the LoadBalancer service exposing the UDP:10000 TCP:4443 ports of the videobridge>
        - name: XMPP_DOMAIN
          value: meet.jitsi
        - name: XMPP_AUTH_DOMAIN
          value: auth.meet.jitsi
        - name: JVB_COMPONENT_SECRET
          value: s3cr3t
        - name: JVB_STUN_SERVERS
          value: stun.l.google.com:19302,stun1.l.google.com:19302,stun2.l.google.com:19302
        - name: JICOFO_AUTH_USER
          value: focus
        - name: TZ
          value: Europe/Paris
        image: jitsi/jvb
        name: jvb
        ports:
        - containerPort: 10000
          protocol: UDP
        - containerPort: 4443
        resources: {}
      restartPolicy: Always
status: {}
