k8s/prosody-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prosody 
    service: prosody
  name: prosody
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prosody 
        service: prosody
    spec:
      containers:
      - env:
        - name: XMPP_DOMAIN
          value: meet.jitsi
        - name: XMPP_AUTH_DOMAIN
          value: auth.meet.jitsi
        - name: XMPP_MUC_DOMAIN
          value: muc.meet.jitsi
        - name: JICOFO_COMPONENT_SECRET
          value: s3cr37
        - name: JVB_COMPONENT_SECRET
          value: s3cr3t
        - name: JICOFO_AUTH_USER
          value: focus
        - name: JICOFO_AUTH_PASSWORD
          value: passw0rd
        - name: TZ
          value: Europe/Paris
        image: jitsi/prosody
        name: prosody
        ports:
        - containerPort: 5222
        - containerPort: 5280
        - containerPort: 5347
        resources: {}
      restartPolicy: Always
status: {}
