k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: web 
    service: web
  name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
      - env:
        - name: JICOFO_AUTH_USER
          value: focus
        - name: XMPP_DOMAIN
          value: meet.jitsi
        - name: XMPP_AUTH_DOMAIN
          value: auth.meet.jitsi
        - name: XMPP_BOSH_URL_BASE
          value: http://prosody:5280
        - name: XMPP_MUC_DOMAIN
          value: muc.meet.jitsi
        - name: TZ
          value: Europe/Paris
        image: jitsi/web
        name: web
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
status: {}
