k8s/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: web-gateway 
spec: 
  selector:
    istio: ingressgateway
  servers: 
  - port: 
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls: 
      mode: PASSTHROUGH
    hosts: 
    - "*" 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: web-http
spec:
  hosts: 
  - "*"
  gateways:
  - web-gateway
  http:
  - route: 
    - destination: 
        host: web
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-https
spec: 
  hosts:
  - "*"
  gateways:
  - web-gateway
  tls: 
  - match:
    - port: 443
      sniHosts:
      - "*"
    route:
    - destination:
        host: web
