k8s/secure-web-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-web-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: PASSTHROUGH # enables HTTPS on this port
 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-https
spec: 
  hosts:     
  - "*"
  gateways:
  - https-web-gateway
  tls:
  - match:
    - port: 443
      sni_hosts:
      - "*"
    route:
    - destination:
        host: web 
        port:
          number: 443
