k8s/web-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web
spec: 
  hosts:     
  - "*"
  gateways:
  - web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web 
        port:
          number: 80
